Update style.scss - negative right margin to external links to avoid gaps

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,7 @@ a.external {
   background-size: 1.75em;
   padding-right: 1.95em;
   background-repeat: no-repeat;
+  margin-right: -1em;
 
 }
 
